<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical"
    tools:context="com.trsoft.catmovie.BuyVipActivity">

    <com.trsoft.catmovie.common.CommonTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/me_buy_vip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/spacing_medium"
        android:textColor="@color/color_text_main"
        android:text="@string/vip_sel_taocan" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_vip_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_buy_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white" />

    <Button
        android:id="@+id/btn_recharge"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginRight="@dimen/spacing_medium"
        android:layout_marginTop="30dp"
        android:background="@drawable/sel_btn_login"
        android:text="@string/vip_exchange"
        android:textColor="@color/white" />

</LinearLayout>
