<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.trsoft.catmovie.common.CommonTitle
        android:id="@+id/ct_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_login" />

    <LinearLayout
        android:id="@+id/line1"
        style="@style/style_common_view"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_circle_white_bg">

        <TextView
            style="@style/style_common_tv"
            android:layout_width="wrap_content"
            android:text="@string/login_phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/login_phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="@dimen/text_main" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/red" />

        <TextView
            android:id="@+id/tv_send_code"
            style="@style/style_common_tv"
            android:layout_width="wrap_content"
            android:text="@string/login_code" />
    </LinearLayout>

    <LinearLayout
        style="@style/style_common_view"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_circle_white_bg">

        <TextView
            style="@style/style_common_tv"
            android:layout_width="wrap_content"
            android:text="@string/login_code" />

        <EditText
            android:id="@+id/et_code"
            style="@style/style_common_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/style_common_view"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/sel_btn_login"
        android:enabled="false"
        android:text="@string/title_login"
        android:textColor="@color/white" />


</LinearLayout>
